Calendario remake semiterminado

--- a/src/interfaz/Calendario.form
+++ b/src/interfaz/Calendario.form
@@ -23,50 +23,46 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="hayEventosLosDiasLabel" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <Component id="atrasBoton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="agregarActividadBoton" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="eventoText" min="-2" pref="237" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" attributes="0">
-                                      <Component id="borrarEventoBoton" min="-2" pref="120" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="paseosBoton" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
-                          </Group>
-                          <Component id="linea1Label" alignment="0" min="-2" pref="564" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="atrasBoton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
+                      <Component id="actPeriodicaBoton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="actividadRegBoton" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="refresh" min="-2" pref="129" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="calendario" min="-2" pref="400" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                      <Component id="hayEventosLosDiasLabel" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                              <Component id="eventosDiaBoton1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="calendario" min="-2" pref="400" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="actividadLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="paseosLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="AlimentacionLabel" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="linea1Label" alignment="0" pref="564" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="eventosDiaBoton" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel1" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel2" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel3" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel4" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel5" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel6" min="-2" max="-2" attributes="0"/>
-                          <Component id="eventLabel7" min="-2" max="-2" attributes="0"/>
+                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="55" max="32767" attributes="0"/>
+              <EmptySpace pref="47" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,47 +71,28 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="eventosDiaBoton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                      <Component id="eventLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel4" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel5" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel6" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="eventLabel7" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="refresh" min="-2" max="-2" attributes="0"/>
+                  <Component id="eventosDiaBoton" min="-2" max="-2" attributes="0"/>
                   <Component id="calendario" min="-2" pref="225" max="-2" attributes="0"/>
+                  <Component id="eventosDiaBoton1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
               <Component id="hayEventosLosDiasLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="linea1Label" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="63" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="eventoText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="agregarActividadBoton" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="AlimentacionLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="paseosLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                      <Component id="atrasBoton" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="borrarEventoBoton" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="paseosBoton" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <Component id="actividadLabel" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="62" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="atrasBoton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="actPeriodicaBoton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="actividadRegBoton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -133,38 +110,12 @@
     </Component>
     <Component class="com.toedter.calendar.JCalendar" name="calendario">
     </Component>
-    <Component class="javax.swing.JTextField" name="eventoText">
-    </Component>
-    <Component class="javax.swing.JButton" name="agregarActividadBoton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Agregar Actividad"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregarActividadBotonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="borrarEventoBoton">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Borrar Eventos"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="borrarEventoBotonActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="eventosDiaBoton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Ver eventos del dia"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eventosDiaBotonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="refresh">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Eventos del mes"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="linea1Label">
@@ -180,66 +131,61 @@
         <Property name="text" type="java.lang.String" value="Hay eventos los dias"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="paseosBoton">
+    <Component class="javax.swing.JButton" name="actPeriodicaBoton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Asignar responsable de paseos"/>
+        <Property name="text" type="java.lang.String" value="Responsable actividad periodica"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="actPeriodicaBotonActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel1">
+    <Component class="javax.swing.JLabel" name="AlimentacionLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Calibri" size="14" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
+        <Property name="text" type="java.lang.String" value="Alimentacion"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel2">
+    <Component class="javax.swing.JLabel" name="paseosLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Calibri" size="14" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jLabel2"/>
+        <Property name="text" type="java.lang.String" value="Paseos"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel3">
+    <Component class="javax.swing.JLabel" name="actividadLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Calibri" size="14" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="jLabel3"/>
+        <Property name="text" type="java.lang.String" value="Actividad"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel4">
+    <Component class="javax.swing.JButton" name="actividadRegBoton">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="14" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="jLabel4"/>
+        <Property name="text" type="java.lang.String" value="Registrar una actividad Realizada"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="actividadRegBotonActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel5">
+    <Component class="javax.swing.JButton" name="eventosDiaBoton1">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="14" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="jLabel5"/>
+        <Property name="text" type="java.lang.String" value="Ver dias con eventos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eventosDiaBoton1ActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel6">
+    <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="14" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="jLabel6"/>
+        <Property name="text" type="java.lang.String" value="ver  todo listas"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="eventLabel7">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="14" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="jLabel7"/>
-      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
